# opengl-cpp-playground

./: CMakeLists.txt  README.md
triangle/: CMakeLists.txt  readme.md  triangle.sln
triangle/triangle/: triangle.cpp  triangle.vcxproj  triangle.vcxproj.filters
